compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__integer_inference_rem.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Inferred integer types should pass\n    % Decl should be a concrete type\n    var a := 1 rem 1\n    % Types of operands should make the type concrete\n    var r : real\n    var i : int\n    var n : nat\n    var _r0 := 1 rem r\n    var _r1 := r rem 1\n    var _i0 := 1 rem i\n    var _i1 := i rem 1\n    var _n0 := 1 rem n\n    var _n1 := n rem 1\n"
---
"a"@"src/main.t:87..88" [ConstVar(Var, No)]: int
"r"@"src/main.t:162..163" [ConstVar(Var, No)]: real
"i"@"src/main.t:179..180" [ConstVar(Var, No)]: int
"n"@"src/main.t:195..196" [ConstVar(Var, No)]: nat
"_r0"@"src/main.t:211..214" [ConstVar(Var, No)]: real
"_r1"@"src/main.t:234..237" [ConstVar(Var, No)]: real
"_i0"@"src/main.t:257..260" [ConstVar(Var, No)]: int
"_i1"@"src/main.t:280..283" [ConstVar(Var, No)]: int
"_n0"@"src/main.t:303..306" [ConstVar(Var, No)]: nat
"_n1"@"src/main.t:326..329" [ConstVar(Var, No)]: nat
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
