compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__report_aliased_type_in_assign.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type a0 : real\ntype a1 : int\nvar k : a0\nvar i : a1\ni := k"
---
"a0"@(FileId(1), 5..7) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of real
"a1"@(FileId(1), 20..22) [Type]: alias[DefId(PackageId(0), LocalDefId(1))] of int
"k"@(FileId(1), 33..34) [ConstVar(Var, No)]: alias[DefId(PackageId(0), LocalDefId(0))] of real
"i"@(FileId(1), 44..45) [ConstVar(Var, No)]: alias[DefId(PackageId(0), LocalDefId(1))] of int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 53..55): mismatched types
| note for (FileId(1), 56..57): this is of type `a0 (alias of real)`
| note for (FileId(1), 51..52): this is of type `a1 (alias of int)`
| info: `real` is not assignable into `int`
