compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__require_positive_size_in_constvar.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : 1 .. 0"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:8..14: element range is too small
| note for src/main.t:8..14: computed range size is 0
| error for src/main.t:8..14: zero sized ranges cannot be used in `var` declarations
