compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__require_positive_size_in_pointer_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : ^1..0"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of pointer to range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 10..14): element range is too small
| note for (FileId(1), 10..14): computed range size is 0
| error for (FileId(1), 10..14): zero sized ranges cannot be used in pointer types
