compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__require_positive_size_in_set_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : set of 1..0"
---
"_"@(FileId(1), 5..6) [Type]: set[DefId(PackageId(0), LocalDefId(1))] of range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"_"@(FileId(1), 9..20) [Set]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 16..20): element range is too small
| note for (FileId(1), 16..20): computed range size is 0
| error for (FileId(1), 16..20): zero sized ranges cannot be used in `set` element types
